// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processMiddlewareConfig() should include global options in InternalSubtreeConfig objects 1`] = `
{
  "compress": false,
  "cookieName": "path1",
  "cookieOptions": {
    "path": "/test",
    "sameSite": false,
    "secure": true,
  },
  "defaultState": undefined,
  "deserializationFunction": undefined,
  "ignoreStateFromStaticProps": false,
  "serializationFunction": undefined,
  "subtree": "path1",
}
`;

exports[`processMiddlewareConfig() should include global options in InternalSubtreeConfig objects 2`] = `
{
  "compress": false,
  "cookieName": "path2",
  "cookieOptions": {
    "path": "/test",
    "sameSite": false,
    "secure": true,
  },
  "defaultState": undefined,
  "deserializationFunction": undefined,
  "ignoreStateFromStaticProps": false,
  "serializationFunction": undefined,
  "subtree": "path2",
}
`;
